@@ -1,4 +1,6 @@
 ver 0.19.19 (not yet released)
+* output
+  - pulse: support 32 bit, 24 bit and floating point playback
 
 ver 0.19.18 (2016/08/05)
 * decoder
